# PicoTeam2

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md
Segang/: CMakeLists.txt  main.c  soilmoisture.c
Siyeong/: test.c
docs/: 2조 프로젝트 계획서.hwp  README.md  flow.mmd  flow3.mmd
server/mqtt/: mqt_server.py  sensor_db.json  subscriber_test.c
server/mqtt/templates/: index.html
src/Jeyoon/: Battery_level.c  Battery_test.c  CMakeLists.txt  lwipopts.h  motortest.c  servomotor.c  soil.c  soil_pump.c  waterpump.c
src/Segang/: CMakeLists.txt  dht22.c  lwipopts.h  main.c  waterlevel.c
src/Siyeong/: CMakeLists.txt  TempHumiTest.c  Test1 copy.c  Test1.c  main.c
